# otus_cpp_basic

./: .gitignore  README.md
l_1/: hello.cpp
l_2/: CMakeLists.txt  add.txt
l_2/hello/: CMakeLists.txt  hello.cpp
l_2/hello2/: CMakeLists.txt  hello.cpp  hello.h  main.cpp
l_2/homework/: CMakeLists.txt  example.cpp  example.h  hello_world.cpp  move_me_out.cpp  move_me_out.h
l_3/: 10_file_io.cpp  1_1_cin_cout.cpp  1_2_cin_cout_using.cpp  1_3_cin_cout_namespace.cpp  2_type_ranges_int.cpp  3_type_ranges_float.cpp  4_arithm_operation.cpp  5_bool_logic.cpp  6_if.cpp  7_switch.cpp  8_while_do_loop.cpp  9_for_loop.cpp  CMakeLists.txt  xx_cats_int_float.cpp
l_4/: 0_pow_simple.cpp  10_hanoi.cpp  11_fib.cpp  1_pow.cpp  2_gcd_cin.cpp  3_main_args.cpp  4_gcd_cli_args.cpp  5_swap_naive.cpp  6_swap.cpp  7_minigrep.cpp  8_module.cpp  9_hello.cpp  CMakeLists.txt  add.cpp  add.txt  hw_fib_optimal.cpp  pdf.cpp
l_5/: CMakeLists.txt  add.txt  compilation.cpp  dynamic_library_usage.cpp  file_io.cpp  pdf.cpp  static_library_usage.cpp
l_5/dynamic_library/: CMakeLists.txt  calculation.cpp  calculation.h
l_5/homework_add/: CMakeLists.txt  argument.cpp  check_value.cpp  high_scores.cpp  high_scores.txt  random_value.cpp
l_5/static_library/: CMakeLists.txt  datetime.cpp  datetime.h
